# clinicedc

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES  README.rst  pyproject.toml  requirements.txt  runtests.py  tox.ini
demo-edc/: manage.py  pyproject.toml
demo-edc/src/demo_ae/: admin_site.py  apps.py  urls.py
demo-edc/src/demo_ae/admin/: __init__.py  ae_followup_admin.py  ae_initial_admin.py  ae_tmg_admin.py  death_report_admin.py  death_report_tmg_admin.py  death_report_tmg_second_admin.py
demo-edc/src/demo_ae/migrations/: 0001_initial.py
demo-edc/src/demo_ae/models/: __init__.py  ae_initial.py  death_report.py  death_report_tmg_second.py
demo-edc/src/demo_auth/: apps.py  auth_objects.py  auths.py
demo-edc/src/demo_consent/: admin_site.py  apps.py  consents.py  models.py  urls.py
demo-edc/src/demo_consent/admin/: __init__.py  subject_consent_admin.py  subject_consent_v1_admin.py  subject_consent_v2_admin.py
demo-edc/src/demo_consent/migrations/: 0001_initial.py
demo-edc/src/demo_dashboard/: apps.py
demo-edc/src/demo_edc/: apps.py  asgi.py  settings.py  wsgi.py
demo-edc/src/demo_lab/: apps.py
demo-edc/src/demo_lists/: apps.py
demo-edc/src/demo_prn/: apps.py
demo-edc/src/demo_reports/: apps.py
demo-edc/src/demo_screening/: admin.py  admin_site.py  apps.py  models.py
demo-edc/src/demo_screening/migrations/: 0001_initial.py
demo-edc/src/demo_sites/: apps.py  sites.py
demo-edc/src/demo_subject/: apps.py
demo-edc/src/demo_subject/migrations/: 0001_initial.py
demo-edc/src/demo_subject/models/: __init__.py  subject_visit.py  (+1 more)
(+1354 files in other folders)
